# cloudflare-modal-neon

./: .gitignore  CONTRIBUTING.md  README.md  fun.code-workspace  main.code-workspace
.github/workflows/: ci.yaml
server/: .coverage  .gitignore  coverage.xml  pyproject.toml
server/app/: _logfire.py  _modal.py  _modal_otel.py  logging.py  main.py  middlewares.py  router.py  sentry.py  settings.py
server/app/health/: router.py
server/app/items/: router.py  schemas.py  service.py
server/app/kit/: postgres.py
server/app/kit/models/: __init__.py  base.py
server/migrations/: env.py
server/migrations/versions/: 2025_03_13_1516-569bce7ed9d3_initial_migration.py
server/tests/fixtures/: __init__.py  base.py  items.py  postgres.py
server/tests/health/: test_health_router.py
server/tests/items/: test_items.py
server/tests/misc/: test_misc.py
web/: .gitignore  bun.lockb  package.json  tsconfig.app.json  vite.config.ts  wrangler.toml
web/public/: 404.html
web/src/: App.tsx  logfire.ts  main-worker.js  main.tsx  sentry.ts
web/src/lib/: api.ts  config.ts
